fix: fix minor things in some widgets
- [x] delete unused variable (optionpopup.py)
- [x] remove duplicated lines (manage_prices_screen.kv)
- [x] refactor: change intern classes names (datatable.py)(datatable.kv)
- [x] add new checkboxes utilities (datatable.py)
- [x] (datatable.py)
- [x] remove unused import (doubleclicklabel.py)
- [x] fix: change color text when button color changes (emptybutton.kv)
- [x] remove unused import (messagebox.py)
- [x] remove checkbox default size (widgets_styles.kv)

--- a/app/screens/manage_prices_screen.kv
+++ b/app/screens/manage_prices_screen.kv
@@ -8,6 +8,7 @@
 #:import DataTable screens.widgets.datatable
 #:import DoubleClickLabel screens.widgets.doubleclicklabel
 #:import SearchTextInput screens.widgets.searchtextinput
+#:import SelectOptionDropDown screens.widgets.selectoptiondropdown
 
 <DatePicker>:
     pHint: .25, .3
@@ -202,7 +203,6 @@
                                 icon: './assets/icons/down.png'
                                 options: root.get_suppliers()
                                 hint_text: "Supplier"
-                                icon: './assets/icons/down.png'
                                 on_text: root.all_upper_case(self)
                         # Supplier's code
                         TextField:
@@ -242,7 +242,6 @@
                                     icon: './assets/icons/down.png'
                                     options: root.get_units()
                                     hint_text: "Unit"
-                                    icon: './assets/icons/down.png'
                                     on_select: root.update_prices()
                                     on_text: root.all_upper_case(self)
                         # Cost
@@ -327,7 +326,6 @@
                                 icon: './assets/icons/down.png'
                                 options: root.get_sections()
                                 hint_text: "Section"
-                                icon: './assets/icons/down.png'
                                 on_text: root.all_upper_case(self)
                         # Date
                         TextField:
