--- a/app/screens/widgets/widgets_styles.kv
+++ b/app/screens/widgets/widgets_styles.kv
@@ -18,3 +18,5 @@
 <CheckBox>:
     background_checkbox_normal: './assets/icons/square_2.png'
     background_checkbox_down: './assets/icons/square_plus.png'
+    size_hint_x: None
+    width: 20
