feat: create group_raise screen
- [x] add checkboxes group image
    new file:   app/assets/icons/circle.png
    new file:   app/assets/icons/circle_plus.png
    modified:   app/screens/widgets/checkboxwithtext.kv
    modified:   app/screens/widgets/checkboxwithtext.py
    modified:   app/screens/widgets/widgets_styles.kv
- [x] refactor get_products() function
    modified:   app/interface.py
    modified:   app/screens/manage_prices.py
- [x] create group_raise screen
    new file:   app/screens/group_raise.py
    new file:   app/screens/group_raise_screen.kv
    modified:   app/screens/home.py
    modified:   app/screens/home_screen.kv

--- a/app/screens/home_screen.kv
+++ b/app/screens/home_screen.kv
@@ -49,6 +49,13 @@
                 icon: './assets/icons/edit_1.png'
                 screen_name: "manage"
                 on_press: root.change_category(self)
+            # Group Raise
+            CategoryButton:
+                id: btn_group_raise
+                text: "Group Raise"
+                icon: './assets/icons/surcharges.png'
+                screen_name: "group"
+                on_press: root.change_category(self)
             # Print tables
             CategoryButton:
                 id: btn_print_tables
@@ -116,6 +123,8 @@
                     name: "buy"
                 ManagePrices:
                     name: "manage"
+                GroupRaise:
+                    name: "group"
                 PrintTables:
                     name: "print"
                 SettingsScreen:
