--- a/app/screens/widgets/widgets_styles.kv
+++ b/app/screens/widgets/widgets_styles.kv
@@ -18,5 +18,8 @@
 <CheckBox>:
     background_checkbox_normal: './assets/icons/square_2.png'
     background_checkbox_down: './assets/icons/square_plus.png'
+    background_radio_normal: './assets/icons/circle.png'
+    background_radio_down: './assets/icons/circle_plus.png'
+    pos_hint: {'center_x': 0.5, 'center_y': 0.5}
     size_hint_x: None
     width: 20
