feat: create budgets screen

--- a/app/screens/home_screen.kv
+++ b/app/screens/home_screen.kv
@@ -41,6 +41,7 @@
                 id: btn_budgets
                 text: "Budgets"
                 icon: './assets/icons/form_1.png'
+                screen_name: "budgets"
                 on_press: root.change_category(self)
             # Manage Prices
             CategoryButton:
@@ -121,6 +122,8 @@
                     name: "none"
                 Buy:
                     name: "buy"
+                Budgets:
+                    name: "budgets"
                 ManagePrices:
                     name: "manage"
                 GroupRaise:
